--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "highlight.js": "^11.11.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jsvectormap": "1.3.1",
     "lightgallery": "^2.8.2",
     "lightgallery.js": "^1.4.0",
@@ -64,6 +66,7 @@
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
